@@ -12,5 +12,6 @@ void cambiar_estado(void (*algoritmo_planificador)(t_pcb* process, t_list* estad
 void actualizarTiempo(t_temporal **metrica_actual,t_temporal **metricas_de_tiempo_estado);
 void queue_FIFO(t_pcb *process, t_list *queue);
 void traer_proceso_a_MP();
+void init_fist_process(char *archivo_pseudocodigo,int Tamanio_proc);
 
 #endif //KERNEL_PLANNER_H
