@@ -12,8 +12,7 @@ extern t_config_kernel *config_kernel;
 extern t_kernel_servers *kernel_servers;
 
 extern t_planner *planner;
-extern t_short_term *short_term_planner;
-extern t_long_term *long_term_planner;
+
 
 extern int socket_memoria;
 
