@@ -26,11 +26,19 @@ void kernel_server_dispatch_handler(int cpu_socket, int operation, const char *s
 
     new_buffer->stream = recibir_buffer(&new_buffer->size, cpu_socket);
 
+      if (operation == HANDSHAKE) {
+        log_info(logger,"LLego op handssake");
+        recibir_handshake(cpu_socket);
+    } else {
+        log_error(logger, "Operación no válida para el servidor IO: %d", operation);}
+
+
     switch(operation)
     {
     // Operaciones
     case HANDSHAKE:
         recibir_handshake(cpu_socket);
+        log_info(logger,"HUBO HANDSHAKE CON:  %s",server_name);
         break;
 
     case CPU_ID:
@@ -52,8 +60,13 @@ void kernel_server_dispatch_handler(int cpu_socket, int operation, const char *s
         set_cpu(cpu_socket, DISPONIBLE);
 
         //avisar_dump_memory(process->pid);
-       
-        enviar_proceso_cpu(cpu_socket, list_get(planner->short_term->queue_READY->queue_ESTADO, 0)); 
+
+
+        // como se acaba de liberar una CPU, enviamos el primer proceso de READY a EXECUTE 
+        //enviar_proceso_cpu(cpu_socket, list_get(planner->short_term->queue_READY->queue_ESTADO, 0)); 
+
+        //ENTIENDO la logica, pero creo que la funcion de enviar a cpu solo deberia llamarse en un unico lugar,
+        // que es la queue de execute. SI QUE DEBERIA "ACTIVARSE UNA SECUENCIA PARA QUE SUCEDA"
         
 
         log_info(logger,"Se recibio la syscall INIC_PROC desde el server %s",server_name);
@@ -66,9 +79,10 @@ void kernel_server_dispatch_handler(int cpu_socket, int operation, const char *s
 
 
         // como se acaba de liberar una CPU, enviamos el primer proceso de READY a EXECUTE 
-        enviar_proceso_cpu(cpu_socket, list_get(planner->short_term->queue_READY->queue_ESTADO, 0));
+        //enviar_proceso_cpu(cpu_socket, list_get(planner->short_term->queue_READY->queue_ESTADO, 0));
          
-       
+         //ENTIENDO la logica, pero creo que la funcion de enviar a cpu solo deberia llamarse en un unico lugar,
+        // que es la queue de execute. SI QUE DEBERIA "ACTIVARSE UNA SECUENCIA PARA QUE SUCEDA"
 
 
         log_info(logger,"Se recibio la syscall IO desde el server %s",server_name);
