@@ -3,9 +3,9 @@
 
 void carnicero(t_pcb* process){
 
-    pthread_mutex_lock(process->queue_ESTADO_ACTUAL->mutex);
+    pthread_mutex_lock(&process->queue_ESTADO_ACTUAL->mutex);
     list_remove_element(process->queue_ESTADO_ACTUAL->queue_ESTADO, process);
-    pthread_mutex_unlock(process->queue_ESTADO_ACTUAL->mutex);
+    pthread_mutex_unlock(&process->queue_ESTADO_ACTUAL->mutex);
     
     // aca van los logs
     free(process->archivo);    
