@@ -5,8 +5,7 @@ t_config_kernel *config_kernel;
 t_kernel_servers *kernel_servers;
 
 t_planner *planner;
-t_short_term *short_term_planner;
-t_long_term *long_term_planner;
+
 
 int socket_memoria;
 
